Sat Feb 03 17:58:51 2001  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c:  Patch from Tim Jansen <tim@tjansen.de> to fix
	  a buffer overflow with xinerama support

Sat Feb 03 15:39:29 2001  George Lebl <jirka@5z.com>

	* gdm.spec.in: patch from Lee Mallabone <lee@fonicmonkey.net>, to
	  make gdmconfig actually work. (install the glade and desktop file)

Fri Feb 02 23:32:56 2001  George Lebl <jirka@5z.com>

	* Release 2.0.97.1

Fri Feb 02 20:03:49 2001  George Lebl <jirka@5z.com>

	* configure.in, config/Default.redhat, config/Failsafe.redhat,
	  config/Failsafe.in, config/Makefile.am, gdm.spec.in:  First
	  attempt at making an rpm.  Doesn't break the build, but I doubt
	  it works as I haven't tried it.  Will test on my laptop later.

Fri Feb 02 18:29:40 2001  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c: the xinerama support might badmach if run under
	  a non xinerama supporting xserver, so trap errors and just assume
	  one screen if we get errors.

Thu Feb 01 18:28:33 2001  George Lebl <jirka@5z.com>

	* Release 2.0.97

Thu Feb 01 18:26:17 2001  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c: Add a hack so that if the Welcome string is
	  set to a default, use the gettext translation for added hack
	  value and more translations.

Thu Feb 01 17:58:30 2001  George Lebl <jirka@5z.com>

	* gui/gdmconfig.(c|glade): some glade fixes, and add a reset option
	  when applying

	* daemon/gdm.h: use true/false for booleans in defaults

Thu Feb 01 17:05:54 2001  George Lebl <jirka@5z.com>

	* Apply an port a patch from <tim.jansen@systembureau.com>,
	  furhter modified default config (config/gdm.conf.in) and the 
	  configuratior (gui/gdmconfig.c) to include the screen option

	* gui/gdmlogin.c, configure.in: added support for Xinerama, 
          the new key greeter/XineramaScreen selects on which screen the 
          greeter will be centered

Thu Feb 01 04:49:11 2001  George Lebl <jirka@5z.com>

	* config/gdm.conf.in:  Add gdm to the list of default excludes
