@@ -1,3 +1,8 @@
+Sat Feb 03 18:24:10 2001  George Lebl <jirka@5z.com>
+
+	* daemon/xmdcp.c: apply some changes found in the gdm debian
+	  paches, but they don't make any difference
+
 Sat Feb 03 17:58:51 2001  George Lebl <jirka@5z.com>
 
 	* gui/gdmlogin.c:  Patch from Tim Jansen <tim@tjansen.de> to fix
